--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -123,3 +123,50 @@ form button:hover {
   /* background-color: #2fb86e; */
   opacity: 0.8;
 }
+
+.items-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
+}
+
+.items-grid li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  text-align: center;
+
+  background-color: #f5f5f5;
+  list-style: none;
+
+  border: 2px solid #f5f5f5;
+  border-radius: 8px;
+
+  height: 140px;
+
+  padding: 32px 24px 16px;
+
+  cursor: pointer;
+}
+
+.items-grid li span {
+  flex: 1;
+  display: flex;
+  align-items: center;
+
+  color: var(--title-color);
+
+  margin-top: 12px;
+}
+
+.items-grid li.selected {
+  background-color: #e1faec;
+  border: 2px solid #32cb79;
+}
+
+.items-grid li img,
+.items-grid li span {
+  pointer-events: none;
+}
