--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -9,6 +9,8 @@
 
 {% block content %}
   <div class="content">
+    {% include("partials/page-header.njk") %}
+
     <main>
       <h1>Seu marketplace de coleta de resíduos</h1>
 
