--- a/src/views/partials/modal.njk
+++ b/src/views/partials/modal.njk
@@ -10,7 +10,7 @@
       <div class="search field">
         <input type="text" name="search" placeholder="Pesquise por Cidade">
         <button>
-          <img src="/assets/icones/search.svg" alt="Buscar">
+          <img src="/assets/icons/search.svg" alt="Buscar">
         </button>
       </div>
     </form>
