--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,7 +2,7 @@
 #page-home {
   height: 100vh;
 
-  background: url('../assets/icones/home-background.svg') no-repeat;
+  background: url('../assets/icons/home-background.svg') no-repeat;
   background-position: 35vw bottom;
 }
 
@@ -37,7 +37,7 @@
   display: flex;
   margin-right: 16px;
 
-  background-image: url('../assets/icones/log-in.svg');
+  background-image: url('../assets/icons/log-in.svg');
 
   width: 20px;
   height: 20px;
@@ -101,7 +101,7 @@
 
 #page-home main a span::after {
   content: "";
-  background-image: url('../assets/icones/search.svg');
+  background-image: url('../assets/icons/search.svg');
 
   width: 20px;
   height: 20px;
