--- a/src/views/create-point.njk
+++ b/src/views/create-point.njk
@@ -8,10 +8,13 @@
 
 {% block styles %}
   <link rel="stylesheet" href="/styles/create-point.css">
+  <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
-  <form action="" method="GET">
+  {% include("partials/page-header-back.njk") %}
+
+  <form action="/create-point" method="post">
 
     <h1>Cadastro do ponto de coleta</h1>
 
@@ -20,9 +23,16 @@
         <h2>Dados da entidade</h2>
       </legend>
 
-      <div class="field">
-        <label for="name">Nome da entidade</label>
-        <input type="text" name="name" required="required">
+      <div class="field-group">
+        <div class="field">
+          <label for="name">Nome da entidade</label>
+          <input type="text" name="name" required="required">
+        </div>
+
+        <div class="field">
+          <label for="name">Imagem da Entidade</label>
+          <input type="url" name="image" placeholder="http://" required="required">
+        </div>
       </div>
 
       <div class="field-group">
@@ -62,33 +72,33 @@
       </legend>
 
       <div class="items-grid">
-        <li data-id="1">
-          <img src="/assets/icones/lampadas.svg" alt="Lâmpadas">
+        <li data-id="Lâmpadas">
+          <img src="/assets/icons/lampadas.svg" alt="Lâmpadas">
           <span>Lâmpadas</span>
         </li>
 
-        <li data-id="2">
-          <img src="/assets/icones/baterias.svg" alt="Pilhas e Baterias">
+        <li data-id="Pilhas e Baterias">
+          <img src="/assets/icons/baterias.svg" alt="Pilhas e Baterias">
           <span>Pilhas e Baterias</span>
         </li>
 
-        <li data-id="3">
-          <img src="/assets/icones/papeis-papelao.svg" alt="Papéis e Papelão">
+        <li data-id="Papéis e Papelão">
+          <img src="/assets/icons/papeis-papelao.svg" alt="Papéis e Papelão">
           <span>Papéis e Papelão</span>
         </li>
 
-        <li data-id="4">
-          <img src="/assets/icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+        <li data-id="Resíduos Eletrônicos">
+          <img src="/assets/icons/eletronicos.svg" alt="Resíduos Eletrônicos">
           <span>Resíduos Eletrônicos</span>
         </li>
 
-        <li data-id="5">
-          <img src="/assets/icones/organicos.svg" alt="Resíduos Orgânicos">
+        <li data-id="Resíduos Orgânicos">
+          <img src="/assets/icons/organicos.svg" alt="Resíduos Orgânicos">
           <span>Resíduos Orgânicos</span>
         </li>
 
-        <li data-id="6">
-          <img src="/assets/icones/oleo.svg" alt="Óleo de Cozinha">
+        <li data-id="Óleo de Cozinha">
+          <img src="/assets/icons/oleo.svg" alt="Óleo de Cozinha">
           <span>Óleo de Cozinha</span>
         </li>
       </div>
@@ -102,6 +112,12 @@
   </form>
 {% endblock content %}
 
-{% block modal %}{% endblock modal %}
-<script src="/scripts/create-point.js"></script>
-{% block scripts %}{% endblock scripts %}
+{% block modal %}
+  {% if saved %}
+    {% include("partials/modal-point-saved.njk") %}
+  {% endif %}
+{% endblock modal %}
+
+{% block scripts %}
+  <script src="/scripts/create-point.js"></script>
+{% endblock scripts %}
