--- a/src/views/partials/page-header.njk
+++ b/src/views/partials/page-header.njk
@@ -1,5 +1,5 @@
 <header>
-  <img src="/assets/icones/logo.svg" alt="Logo">
+  <img src="/assets/icons/logo.svg" alt="Logo">
   <a href="/create-point">
     <span></span>
     Cadastre um ponto de coleta
