--- a/src/views/search-results.njk
+++ b/src/views/search-results.njk
@@ -11,39 +11,44 @@
 {% endblock styles %}
 
 {% block content %}
-  <main>
-    <h4>
-      <strong>2 pontos</strong>
-      encontrados
-    </h4>
+  {% include("partials/page-header-back.njk") %}
 
-    <div class="cards">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1533626904905-cc52fd99285e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Colectoria">
-        <h1>Colectoria</h1>
-        <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-        <p>
-          Rio do Sul, Santa Catarina
-          <br/>
-          Guilherme Gemballa, Jardim América,
-          <br/>
-          Nº 260.
-        </p>
+  {% if places.length > 0 %}
+    <main>
+      <h4>
+        <strong>{{places.length}}
+          pontos</strong>
+        encontrados
+      </h4>
+
+      <div class="cards">
+        {% for place in places %}
+
+          <div class="card">
+            <img src="{{place.image}}" alt="{{place.name}}">
+            <h1>{{place.name}}</h1>
+            <h3>{{place.items}}</h3>
+            <p>
+              {{place.city}},
+              {{place.state}}
+              <br/>
+              {{place.address}}
+              <br/>
+              {{place.address2}}
+            </p>
+          </div>
+
+        {% endfor %}
+
       </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Papersider">
-        <h1>Papersider</h1>
-        <h3>Papéis e Papelão</h3>
-        <p>
-          Rio do Sul, Santa Catarina
-          <br/>
-          Guilherme Gemballa, Jardim América,
-          <br/>
-          Nº 260.
-        </p>
-      </div>
-    </div>
+    {% else %}
+      <h4>
+        <strong>Nenhum</strong>
+        local encontrado.
+      </h4>
+
+    {% endif %}
 
   </main>
 {% endblock content %}
