--- a/src/views/partials/page-header-back.njk
+++ b/src/views/partials/page-header-back.njk
@@ -1,5 +1,6 @@
 <header>
   <img src="/assets/icons/logo.svg" alt="Logo Ecoleta">
+  <a href="http://github.com/paulorcvieira" target="_blank">by paulorcvieira</a>
   <a href="/">
     <span></span>
     Voltar para home
