--- a/src/views/partials/page-header.njk
+++ b/src/views/partials/page-header.njk
@@ -1,5 +1,6 @@
 <header>
   <img src="/assets/icons/logo.svg" alt="Logo">
+  <a href="http://github.com/paulorcvieira" target="_blank">by paulorcvieira</a>
   <a href="/create-point">
     <span></span>
     Cadastre um ponto de coleta
