--- a/src/views/search-results.njk
+++ b/src/views/search-results.njk
@@ -19,6 +19,10 @@
         <strong>{{places.length}}
           pontos</strong>
         encontrados
+        {% if search > "" %}
+          em:
+          {{search}}
+        {% endif %}
       </h4>
 
       <div class="cards">
